2009-11-01  Sam Steingold  <sds@gnu.org>

	* error.d (begin_error): ensure *ERROR-OUTPUT* is valid first thing

2009-10-31  Sam Steingold  <sds@gnu.org>

	* makemake.in (fsstnd): infer based on TSYSOS instead of HSYSOS
	and actively discriminate between linuxes and bsds

2009-10-31  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: acquire package mutex lock before calling use_package
	* package.d (unuse_package): package mutex should be locked by caller
	(UNUSE-PACKAGE, USE-PACKAGE, %IN-PACKAGE): lock the package

2009-10-30  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_garcol.d (gc_sweep1_varobject_page): fix the build when
	HAVE_SMALL_SSTRING is not defined

2009-10-29  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (ignore-check, value-form-index): revert last patch:
	3.2.5 prescribes style-warning here, the writeup is not normative

2009-10-29  Sam Steingold  <sds@gnu.org>

	* stream.d (fresh_line_low): replaces elastic_newline_pending_p
	(fresh_line): use it for all legwork so that fresh-line is called
	individually on each constituent stream of a BROADCAST-STREAM instead
	of broadcasting a newline to all streams when only one needs it

2009-10-29  Sam Steingold  <sds@gnu.org>

	* stream.d (handle_set, handle_isset): use nullp(.) instead of eq(NIL,.)

2009-10-29  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: fix GC safety issue in SOCKET-STATUS
	* stream.d (parse_sock_list): do not return pointer in heap, rather
	return the cons whose cdr should be filled with socket status
	(handle_set, handle_isset): use new return from parse_sock_list and
	preserve it across maygc calls

2009-10-28  Sam Steingold  <sds@gnu.org>

	* defs2.lisp (date-string): fix the original bug: the date was
	printed to the stdout instead of being returned as a string

2009-10-28  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (ignore-check, value-form-index): make style-warning
	"used despite IGNORE declaration" a regular warning as per
	COMPILER-DIAGNOSTICS:USE-HANDLER